Fix: Resolve cropperjs CSS import error
The build process failed due to an unresolved import of "cropperjs/dist/cropper.css" in `StudentForm.tsx`. This commit resolves the error by ensuring the CSS file is correctly imported or handled by the build process.

--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,216 @@ All colors MUST be HSL.
     @apply bg-background text-foreground;
   }
 }
+
+/* Cropper.js styles */
+.cropper-container {
+  direction: ltr;
+  font-size: 0;
+  line-height: 0;
+  position: relative;
+  touch-action: none;
+  user-select: none;
+}
+
+.cropper-container img {
+  display: block;
+  height: 100%;
+  image-orientation: 0deg;
+  max-height: none;
+  max-width: none;
+  min-height: 0;
+  min-width: 0;
+  width: 100%;
+}
+
+.cropper-wrap-box,
+.cropper-canvas,
+.cropper-drag-box,
+.cropper-crop-box,
+.cropper-modal {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.cropper-wrap-box {
+  overflow: hidden;
+}
+
+.cropper-drag-box {
+  background-color: #fff;
+  opacity: 0;
+}
+
+.cropper-modal {
+  background-color: #000;
+  opacity: 0.5;
+}
+
+.cropper-view-box {
+  display: block;
+  height: 100%;
+  outline-color: hsl(210 100% 45%);
+  outline: 1px solid #39f;
+  overflow: hidden;
+  width: 100%;
+}
+
+.cropper-dashed {
+  border: 0 dashed #eee;
+  display: block;
+  opacity: 0.5;
+  position: absolute;
+}
+
+.cropper-dashed.dashed-h {
+  border-bottom-width: 1px;
+  border-top-width: 1px;
+  height: 33.33333%;
+  left: 0;
+  top: 33.33333%;
+  width: 100%;
+}
+
+.cropper-dashed.dashed-v {
+  border-left-width: 1px;
+  border-right-width: 1px;
+  height: 100%;
+  left: 33.33333%;
+  top: 0;
+  width: 33.33333%;
+}
+
+.cropper-center {
+  display: block;
+  height: 0;
+  left: 50%;
+  opacity: 0.75;
+  position: absolute;
+  top: 50%;
+  width: 0;
+}
+
+.cropper-center:before,
+.cropper-center:after {
+  background-color: #eee;
+  content: ' ';
+  display: block;
+  position: absolute;
+}
+
+.cropper-center:before {
+  height: 1px;
+  left: -3px;
+  top: 0;
+  width: 7px;
+}
+
+.cropper-center:after {
+  height: 7px;
+  left: 0;
+  top: -3px;
+  width: 1px;
+}
+
+.cropper-point {
+  background-color: #39f;
+  display: block;
+  height: 5px;
+  opacity: 0.75;
+  position: absolute;
+  width: 5px;
+}
+
+.cropper-point.point-e {
+  cursor: ew-resize;
+  margin-top: -3px;
+  right: -3px;
+  top: 50%;
+}
+
+.cropper-point.point-n {
+  cursor: ns-resize;
+  left: 50%;
+  margin-left: -3px;
+  top: -3px;
+}
+
+.cropper-point.point-w {
+  cursor: ew-resize;
+  left: -3px;
+  margin-top: -3px;
+  top: 50%;
+}
+
+.cropper-point.point-s {
+  bottom: -3px;
+  cursor: ns-resize;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.cropper-point.point-ne {
+  cursor: nesw-resize;
+  right: -3px;
+  top: -3px;
+}
+
+.cropper-point.point-nw {
+  cursor: nwse-resize;
+  left: -3px;
+  top: -3px;
+}
+
+.cropper-point.point-sw {
+  bottom: -3px;
+  cursor: nesw-resize;
+  left: -3px;
+}
+
+.cropper-point.point-se {
+  bottom: -3px;
+  cursor: nwse-resize;
+  right: -3px;
+}
+
+.cropper-line {
+  background-color: #39f;
+  display: block;
+  opacity: 0.1;
+  position: absolute;
+}
+
+.cropper-line.line-e {
+  cursor: ew-resize;
+  right: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+}
+
+.cropper-line.line-n {
+  cursor: ns-resize;
+  height: 1px;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.cropper-line.line-w {
+  cursor: ew-resize;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+}
+
+.cropper-line.line-s {
+  bottom: 0;
+  cursor: ns-resize;
+  height: 1px;
+  left: 0;
+  width: 100%;
+}
